--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "htm-tool",
-  "version": "1.0.9",
-  "description": "htm tool",
+  "version": "1.0.10",
+  "description": "htm tool set",
   "main": "htm-tool.js",
   "directories": {
     "test": "test"
@@ -18,5 +18,17 @@
   "bugs": {
     "url": "https://github.com/adf0001/htm-tool/issues"
   },
-  "homepage": "https://github.com/adf0001/htm-tool#readme"
+  "homepage": "https://github.com/adf0001/htm-tool#readme",
+  "dependencies": {
+    "add-css-text": "^1.0.1",
+    "browser-http-request": "^1.0.3",
+    "create-assign": "^1.0.1",
+    "dom-document-tool": "^1.0.1",
+    "element-tool": "^1.0.2",
+    "format-error-tool": "^1.0.1",
+    "htm-tool-css": "^1.0.1",
+    "path-tool": "^1.0.1",
+    "query-by-name-path": "^1.0.1",
+    "tmkt": "^1.0.6"
+  }
 }
