--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "element-tool": "^1.0.2",
     "format-error-tool": "^1.0.1",
     "htm-tool-css": "^1.0.1",
+    "htm-tool-ui": "^1.0.2",
     "path-tool": "^1.0.1",
     "query-by-name-path": "^1.0.1",
     "tmkt": "^1.0.6"
