--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htm-tool",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "htm tool set",
   "main": "htm-tool.js",
   "directories": {
@@ -25,16 +25,17 @@
   "homepage": "https://github.com/adf0001/htm-tool#readme",
   "dependencies": {
     "add-css-text": "^1.0.1",
-    "bind-element": "^1.0.2",
-    "bind-ui": "^1.0.9",
+    "bind-element": "^1.0.3",
+    "bind-ui": "^1.0.10",
     "browser-http-request": "^1.0.6",
     "create-assign": "^1.0.1",
     "dom-document-tool": "^1.0.2",
+    "ele-id": "^1.0.2",
+    "ele-tool": "^1.0.1",
     "element-offset": "^1.0.1",
-    "element-tool": "^1.0.4",
     "format-error-tool": "^1.0.1",
     "htm-tool-css": "^1.0.5",
-    "htm-tool-ui": "^1.0.22",
+    "htm-tool-ui": "^1.0.24",
     "insert-adjacent-return": "^1.0.1",
     "path-tool": "^1.0.1",
     "query-by-name-path": "^1.0.1",
