--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "htm-tool",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "htm tool set",
   "main": "htm-tool.js",
   "directories": {
@@ -24,19 +24,21 @@
   },
   "homepage": "https://github.com/adf0001/htm-tool#readme",
   "dependencies": {
-    "add-css-text": "^1.0.1",
-    "bind-element": "^1.0.3",
-    "bind-ui": "^1.0.10",
+    "add-css-text": "^1.0.2",
+    "bind-element": "^1.0.6",
+    "bind-ui": "^1.0.14",
     "browser-http-request": "^1.0.6",
     "create-assign": "^1.0.1",
-    "dom-document-tool": "^1.0.2",
+    "dispatch-event-by-name": "^1.0.1",
     "ele-id": "^1.0.2",
-    "ele-tool": "^1.0.1",
     "element-offset": "^1.0.1",
     "format-error-tool": "^1.0.1",
-    "htm-tool-css": "^1.0.5",
-    "htm-tool-ui": "^1.0.24",
+    "get-element-by-id": "^1.0.2",
+    "get-search-part": "^1.0.1",
+    "htm-tool-css": "^1.0.6",
+    "htm-tool-ui": "^1.0.25",
     "insert-adjacent-return": "^1.0.1",
+    "observe-single-mutation": "^1.0.1",
     "path-tool": "^1.0.4",
     "query-by-name-path": "^1.0.1",
     "tmkt": "^1.0.7"
